--- a/app/views/couponList.html
+++ b/app/views/couponList.html
@@ -1,25 +1,30 @@
-<div ng-controller="CouponListCtrl">
-    <div class="row couponList" style="height:{{height-50}}px">
-        <div class="col-xs-12">
-            <accordion close-others="oneAtATime">
-                <accordion-group class="couponItem" heading="优惠券20元" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-                    This is just some content to illustrate fancy headings.
-                </accordion-group>
-                <!--accordion-group class="couponItem" heading="优惠券20元" ng-repeat="group in groups">
-                    This is just some content to illustrate fancy headings.
-                </accordion-group-->
-                <accordion-group class="couponItem" heading="优惠券20元">
-                    <p>The body of the accordion group grows to fit the contents</p>
-                    <button class="btn btn-default btn-sm" ng-click="addItem()">Add Item</button>
-                    <div ng-repeat="item in items">asdfa</div>
-                </accordion-group>
-                <accordion-group class="couponItem" is-open="status.open">
-                    <accordion-heading>
-                    优惠券20元<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-                    </accordion-heading>
-                This is just some content to illustrate fancy headings.
-                </accordion-group>
-            </accordion>
-        </div>
-    </div>
+<div class='row myCouponListView'>
+    <ul rn-carousel class="image myCouponListCarousel" rn-carousel-transition="fadeAndSlide">
+        <li ng-repeat="oCoupon in aMyCoupons">
+            <div class="couponItemDiv">
+                <div class="couponItemContent">
+                    <div class="couponItem">
+                        <span>{{oCoupon.type === 1 ? '制衣券' : 'Coupon'}}</span>
+                        <span>¥</span>
+                        <span>{{oCoupon.couponValue}}</span>
+                    </div>
+                    <div class="couponItemDesc">
+                        <span>有效期至 {{oCoupon.validTo.toLocaleDateString()}}</span>
+                    </div>
+                </div>
+                <div class="couponItemCheck">
+                    <div class="couponItemSelected" ng-click="onCouponItemSelectClicked(oCoupon)">
+                        <span class="glyphicon glyphicon-ok"></span>
+
+                        <!--label class="myCheckbox">
+                            <input type="checkbox" ng-model="oCoupon.selected">
+                            <span class="glyphicon glyphicon-ok"></span>
+                        </label-->
+                    </div>
+                    <div class="selectMask" style="{{oCoupon.selected === true ? 'display:none' : ''}}"
+                    ng-click="onCouponItemSelectClicked(oCoupon)"></div>
+                </div>
+            </div>
+        </li>
+    </ul>
 </div>
