--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -2,7 +2,7 @@
     <!--div ui-view="saveDetail"-->
         <div>
             <div>
-                <img class='createDesignBgImg' src='img/female_white.png'></img>
+                <img class='createDesignBgImg' ng-src="{{designInfo.bkImg}}"></img>
             </div>
         </div>
 
