--- a/app/views/createDesign.html
+++ b/app/views/createDesign.html
@@ -17,15 +17,15 @@
         <div class='row genderButtonRow'>
             <div class="col-xs-6">
                 <div>
-                    <span ng-click="onMaleSelected()">男</span>
+                    <span class="icon-m" ng-click="onMaleSelected()"></span>
                 </div>
-                <div><img src="img/genderMale.png"></div>
+                <div><img src="img/genderMale.png" ng-click="onMaleSelected()"></div>
             </div>
             <div class="col-xs-6">
                 <div>
-                    <span ng-click="onFemalerSelected()">女</span>
+                    <span class="icon-f" ng-click="onFemalerSelected()"></span>
                 </div>
-                <div><img src="img/genderFemale.png"></div>
+                <div><img src="img/genderFemale.png" ng-click="onFemalerSelected()"></div>
             </div>
         </div>
         <!--div class='row newDesignInfoArea'>
