--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -52,9 +52,14 @@
             <img src="{{largeImgSrc}}">
         </div-->
 
-        <div class="previewDesignBtn" style="{{htmlItemStyle.designToolArea.styleStr}}" ng-click="onPreviewDesignBtnClicked()">
-            <span>好</span>
+        <div class="switchColorButton">
+            <span class="icon-changecolor" ng-click="onChangeColorClicked()">
+                <span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span>
+            </span>
         </div>
+        <!--div class="previewDesignBtn" style="{{htmlItemStyle.designToolArea.styleStr}}" ng-click="onPreviewDesignBtnClicked()">
+            <span>好</span>
+        </div-->
         <div class='toolRow' style="{{htmlItemStyle.designToolArea.styleStr}}">
             <div class="backButton">
                 <span class="glyphicon glyphicon-chevron-left" ng-click="onCreateDesignBackClicked()"></span>
@@ -65,10 +70,10 @@
             <div class="cameraButton">
                 <span class="glyphicon glyphicon-camera" ng-click="onOpenMyGallery()"></span>
             </div>
-            <div class="textButton">
+            <!--div class="textButton">
                 <span class="glyphicon glyphicon-text-size" ng-click="getFileContent()"></span>
             </div>
-            <!--div class="col-xs-2">
+            <div class="col-xs-2">
                 <button type="button" class="btn btn-default">QR</button>
             </div-->
             <div class="createButton">
